<resources>
    <string name="app_name">wee</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="add_contact">Add contact</string>
    <string name="contact_list">Contact list</string>
    <string name="forgot_password">Forgot password</string>
    <string name="getcontacts">Getcontacts</string>
</resources>