<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawablePadding="5dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:drawablePadding="5dp"
        android:hint="@string/phone_number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"

        />

    <Button
        android:id="@+id/btngetcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getcontacts" />

</androidx.appcompat.widget.LinearLayoutCompat>