<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"/>

    <EditText
        android:id="@+id/edtMail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"

        />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_marginTop="10dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>